--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
     <!-- Title Page-->
     <title>Dashboard 3</title>
-    
+
 
 
     <!-- Fontfaces CSS-->
@@ -69,7 +69,7 @@
                                 </a>
                                 <ul class="header3-sub-list list-unstyled">
                                     <li>
-                                        
+
                                     </li>
                                     <li>
                                         <a href="index2.html">Dashboard 2</a>
@@ -528,7 +528,7 @@
 
       <script src="{% static "js/js.cookie.js" %}"></script>
       <script src="{% static "js/jquery.json.min.js" %}"></script>
-    
+
       <script src="{%static "dashboard/vendor/bootstrap-4.1/popper.min.js" %}"></script>
       <script src="{%static "dashboard/vendor/bootstrap-4.1/bootstrap.min.js" %}"></script>
 
@@ -552,11 +552,12 @@
 
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/http-vue-loader"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-material/1.0.0/vue-material.min.js"></script>
 
 
 
