--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,8 +7,8 @@
                 <div class="card-body">
                     <h3 class="card-title">Добро пожаловать в систему добавления расписания ВПИ</h3>
                     <div class="card-text">
-                        Этот сайт преднозначен для внесения расписания в систему. <br>
-                        После внесения расписание, к нему можно будет получить доступ через бота в сообществе
+                        Этот сайт преднозначен для внесения расписания в базу данных чат бота. <br>
+                        После внесения расписания, к нему можно будет получить доступ через сообщения в сообществе
                         <a href="https://vk.com/vlzvpi">ВПИ, неформальненько</a>
 
                         <br><br>
