--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -51,6 +51,11 @@
                                 <img src="images/icon/logo.png" alt="CoolAdmin">
                             </a> -->
                         </div>
+                            {% if form.errors %}
+                                 <div class = "alert alert-danger">
+                                    Неверный логин или пароль, попробуйте еще раз :-)
+                                  </div>
+                            {% endif %}
                         <div class="login-form">
                             <form action="" method="post">
                                 {% csrf_token %}
@@ -58,17 +63,13 @@
                                 <div class="form-group mt-3">
                                     <label>Логин:</label>
                                     {{ form.username|add_class:"au-input au-input--full"  }}
-                                    {% if form.username.errors %} <div class = "alert alert-danger">
-                                    {{ form.username.errors }}</div>{% endif %}
+
                                     <!-- <input class="au-input au-inputfull" type="email" name="email" placeholder="Email"> -->
                                 </div>
                                 <div class="form-group mt-3">
                                     <label>Пароль:</label>
                                     {{ form.password|add_class:"au-input au-input--full" }}
-                                      {% if form.password.errors %} <div class = "alert alert-danger">
-                                    {{ form.password.errors }}</div>{% endif %}
                                     <!-- <input class="au-input au-inputfull" type="password" name="password" placeholder="Password"> -->
-                                </div>
 
                                 <button class="au-btn au-btn--block au-btn--green m-b-20 mt-4" type="submit">войти</button>
                             </form>
@@ -76,7 +77,7 @@
                                 <p>
                                     Еще нет аккаунта? <a href="/accounts/signup">Зарегестрироваться</a>
                                 </p>
-                            </div>  
+                            </div>
                         </div>
                         </div>
                     </div>
