fix url for prod

--- a/templates/timetable/edit_sub_for_group.html
+++ b/templates/timetable/edit_sub_for_group.html
@@ -131,7 +131,7 @@
             data() {
 
                 return {
-                    api_url: 'http://robinvolpi.ru:5001/'
+                    api_url: 'http://robinvolpi.ru:5001/',
                     dialog: false,
                     snackbar: false,
                     saving_changes: false,
