--- a/templates/base.html
+++ b/templates/base.html
@@ -551,12 +551,16 @@
 
 <script src="https://unpkg.com/vue"></script>
 <script src="https://unpkg.com/http-vue-loader"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-material/1.0.0/vue-material.min.js"></script>
+<script src="{% static "vue_req/axios.min.js" %}"></script>
+<script src="{% static "vue_req/vue.js" %}"></script>
+<script src="{% static "vue_req/vuetify.js" %}"></script>
+<script src="{% static "vue_req/js.cookie.min.js" %}"></script>
+<script src="{% static "vue_req/vue-material.min.js" %}"></script>
+{#<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>#}
+{#<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>#}
+{#<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>#}
+{#<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>#}
+{#<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-material/1.0.0/vue-material.min.js"></script>#}
 
 
 
